samples/_failures_safe/1761598158_bde430_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c450e5d0.c: In function ‘main’:
./samples/SAFE/__tmp_c450e5d0.c:129:13: error: expected expression at end of input
  129 |             print_hex(output_data,
      |             ^~~~~~~~~
./samples/SAFE/__tmp_c450e5d0.c:129:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c450e5d0.c:129:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c450e5d0.c:129:13: error: expected declaration or statement at end of input
